# repository-infrastructure-example

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  compose.yaml  example.env  pyproject.toml
.github/workflows/: testing.yml
alembic/: env.py
alembic/versions/: 5508a36b2b3a_initial_tables.py
cli/: _context.py  main.py  organisations.py  seed.py  users.py  version.py
src/repository_infrastructure_example/: __init__.py  exceptions.py
src/repository_infrastructure_example/application/: context.py  settings.py
src/repository_infrastructure_example/application/api/: dependencies.py  main.py  responses.py
src/repository_infrastructure_example/application/api/authentication/: api_key.py  documentation.py  endpoints.py
src/repository_infrastructure_example/application/api/routers/: __init__.py  health.py  organisation.py  user.py
src/repository_infrastructure_example/application/api/schemas/: organisation.py  user.py
src/repository_infrastructure_example/caching/: backend.py  cache.py  key_manager.py  redis.py
src/repository_infrastructure_example/containers/: clients.py  repositories.py  services.py
src/repository_infrastructure_example/dev/factories/: organisation.py  user.py
src/repository_infrastructure_example/domain/: organisation.py  user.py
src/repository_infrastructure_example/infrastructure/: postgres.py  redis.py
src/repository_infrastructure_example/repositories/: backend.py  organisation.py  user.py
src/repository_infrastructure_example/repositories/postgresql/organisation/: dao.py  mappers.py  repository.py
src/repository_infrastructure_example/repositories/postgresql/user/: dao.py  mappers.py  repository.py
src/repository_infrastructure_example/services/: organisation.py  user.py
src/repository_infrastructure_example/utilities/: collections.py  identifiers.py  logging.py  time.py
tests/: conftest.py
tests/test_endpoints/: test_organisation.py  test_users.py
webui/: main.py
webui/pages/: organisation.py  user.py
