[dependency-groups]
cli = [
  "faker>=39.0.0",
  "typer>=0.21.0",
]
dev = [
  "faker>=39.0.0",
  "pre-commit>=4.5.1",
  "pytest-cov>=7.0.0",
  "pytest-env>=1.2.0",
  "pytest>=9.0.2",
  "ruff>=0.14.10",
]
webui = [
  "streamlit>=1.52.2",
]

[project]
authors = [{email = "marcelpaluch@proton.me", name = "marcelpaluch"}]
dependencies = [
  "alembic>=1.17.2",
  "basedpyright>=1.36.2",
  "fastapi[standard]>=0.127.1",
  "loguru>=0.7.3",
  "poethepoet>=0.39.0",
  "psycopg2-binary>=2.9.11",
  "pydantic-settings>=2.12.0",
  "pydantic>=2.12.5",
  "python-slugify>=8.0.4",
  "redis>=7.1.0",
  "rich>=14.2.0",
  "sqlmodel>=0.0.30",
]
description = "Add your description here"
license = "MIT"
license-files = ["LICENSE"]
name = "repository-infrastructure-example"
readme = "README.md"
requires-python = ">=3.14"
version = "0.1.0"

[tool.basedpyright]
exclude = ["./.venv/*", "./alembic/versions/*"]
executionEnvironments = [{root = "src"}]
reportMissingTypeStubs = false
reportUnnecessaryTypeIgnoreComment = true
typeCheckingMode = "strict"
venv = ".venv"

[tool.poe.tasks]
cli = "uv run --group cli cli/main.py"
webui = "uv run --group webui streamlit run webui/main.py"

[tool.poe.tasks.api]
cmd = "fastapi run src/repository_infrastructure_example/application/api/main.py"
use_exec = true

[tool.pytest.ini_options]
# -x: abort tests if one test fails (fail fast)
# -ra: show extra test summary info for skipped, failed, or xfailed tests
# --durations=10: show the 10 slowest tests
# --cov=src: measure coverage for the src directory
# --cov-report=term-missing: print missing lines in the terminal
addopts = "-x -ra --durations=10 --cov=src --cov-report=term-missing"

[tool.uv]
package = true
